<resources>
    <string name="app_name">Nai Java Devs</string>
    <string name="url_label">Github url</string>
    <string name="bio">A man with a vision and never settles for nothing A man with a vision and never settles for nothing A man with a vision and never settles for nothing</string>
    <string name="url">https://github.com/fahadmak/</string>
    <string name="name">Makabugo Fahad</string>
    <string name="username_label">Username</string>
    <string name="username">fahadmak</string>
    <string name="company_label">Company</string>
    <string name="company">Geo Mobile Ltd</string>
    <string name="bio_label">Bio</string>
    <string name="share_title">Share</string>
</resources>
