<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".view.DetailActivity">

    <RelativeLayout
        android:id="@+id/profile_banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00E5FF"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:src="@mipmap/ic_launcher_round"
            app:civ_border_color="#FFFF"
            app:civ_border_width="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_image"
            android:layout_centerHorizontal="true"
            android:layout_margin="9dp"
            android:text="@string/name"
            android:id="@+id/full_name"
            android:textAlignment="center"
            android:textColor="#FFFF"
            android:textSize="30sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="30dp">
        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/username_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url_label"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/url_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/url"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_label"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/company_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/company"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio_label"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bio_data"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:ellipsize="end"
            android:maxEms="8"
            android:maxLines="3"
            android:text="@string/bio"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textSize="17sp" />

    </LinearLayout>
</LinearLayout>
